--- a/index.html
+++ b/index.html
@@ -114,14 +114,14 @@
                 </div>
             </div>
             <div class="col-md-7 col-sm-12 p-5 bg-image position-relative">
-                <img src="./images/Image-2.png" class="ellipse position-absolute w-100">
-                <img src="./images/pattern.png" class="docs position-absolute mt-5">
+                <img src="./images/Image-2.png" class="Speaker position-absolute w-100">
+                <img src="./images/pattern.png" class="bubbles position-absolute mt-5">
             </div>
         </div>
     </div>
 
 
-    <footer class="container z-index">
+    <footer class="container-foot">
         <div class="row p-3">
             <div class="col-3">
                 <span>© 2019 crowdfund. All Rights Reserved</span>
