--- a/index.html
+++ b/index.html
@@ -63,17 +63,16 @@
         </div>
     </div>
 
-    <div class="container-fluid overflow-hidden">
+    <div class="container-fluid">
         <div class="row">
-
-            <div class="col-md-5 col-sm-12">
+            <div class="my-col col-md-5 col-sm-12">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12 col-sm-12">
                             <div class="container-fluid">
                                 <div class="row">
 
-                                    <div class="col-3">
+                                    <div class="my-col-1 col-3">
                                         <img class="Icon-2" src="./images/Icon-2.png" alt="">
                                     </div>
 
@@ -96,7 +95,7 @@
                                 <div class="row">
 
                                     <div class="col-3">
-                                        <img  src="./images/Icon-3.png" alt="">
+                                        <img src="./images/Icon-3.png" alt="">
                                     </div>
 
                                     <div class="col-9 ml-0">
@@ -114,33 +113,32 @@
                 </div>
             </div>
             <div class="col-md-7 col-sm-12 p-5 bg-image position-relative">
-                <img src="./images/Image-2.png" class="Speaker position-absolute w-100">
+                <img src="./images/Image-2.png" class="speaker position-absolute me-0">
                 <img src="./images/pattern.png" class="bubbles position-absolute mt-5">
             </div>
+
+            <footer class="container-fluid footer1">
+                <div class="row p-3">
+                    <div class="col-3">
+                        <span>© 2019 crowdfund. All Rights Reserved</span>
+                    </div>
+                    <div class="footer col-6 text-center">
+                        <a href="#">CONTACT</a>
+                        <a href="#">HELP</a>
+                        <a href="#">TERMS OF USE</a>
+                        <a href="#">PRIVACY POLICY</a>
+                    </div>
+                    <div class="col-3 text-end">
+                        <img class="me-3" src="./images/Twitter.png" alt="Twitter">
+                        <img class="me-3" src="./images/Facebook.png" alt="Facebook">
+                        <img class="me-3" src="./images/YouTube.png" alt="YouTube">
+                    </div>
+    
+                </div>
+            </footer>
+
         </div>
     </div>
-
-
-    <footer class="container-foot">
-        <div class="row p-3">
-            <div class="col-3">
-                <span>© 2019 crowdfund. All Rights Reserved</span>
-            </div>
-            <div class="footer col-6 text-center">
-                <a href="#">CONTACT</a>
-                <a href="#">HELP</a>
-                <a href="#">TERMS OF USE</a>
-                <a href="#">PRIVACY POLICY</a>
-            </div>
-            <div class="col-3 text-end">
-                <img class="me-3" src="./images/Twitter.png" alt="Twitter">
-                <img class="me-3" src="./images/Facebook.png" alt="Facebook">
-                <img class="me-3" src="./images/YouTube.png" alt="YouTube">
-            </div>
-
-        </div>
-    </footer>
-
 
 </body>
 
