--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body style="background: #FAD961;">
+
     <nav class="navbar navbar-expand">
-        <div class="container">
+        <div class="container" style="width: 1440px;">
 
             <div class="brothers d-flex column-gap-3">
                 <div>
@@ -25,8 +26,8 @@
             <ul class="navbar-nav right">
                 <li class="nav-item dropdown d-flex">
                     <img class="img2 rounded-circle" src="./images/Image.png">
-                    <a href="#" class="nav-link name dropdown-toggle">
-                        Kate B.</a>
+                    <a href="#" class="nav-link name dropdown-toggle"><b>
+                        Kate B. </b></a>
                 </li>
             </ul>
         </div>
@@ -38,22 +39,22 @@
             <div class="mark-heading d-flex justify-content-center">
 
                 <div>
-                    <span class="dolar">B. play </span>
+                    <span class="dolar"> B. play </span>
                 </div>
 
                 <div>
-                    <span class="mark-heading-text d-flex">Bluetooth Speaker</span>
+                    <span class="mark-heading-text d-flex"> Bluetooth Speaker </span>
                 </div>
                 <button class="download">
                     <div class="row">
-                        <div class="border-right col-5 p-3 d-flex justify-content-center">
-                            <span class="euro" style="color: #1B1B1B;">
+                        <div class="border-right col-5 d-flex justify-content-center">
+                            <span class="euro mt-2" style="color: #1B1B1B;">
                                 €71,398
                             </span>
                         </div>
 
                         <div class="col-7 p-3">
-                            <span class="Icon"> pledged of €22,461 goal </span>
+                            <span class="Icon"><b> pledged of €22,461 goal </b></span>
                         </div>
                     </div>
 
@@ -63,7 +64,7 @@
         </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid fixed-size">
         <div class="row">
             <div class="my-col col-md-5 col-sm-12">
                 <div class="container-fluid">
@@ -72,7 +73,7 @@
                             <div class="container-fluid">
                                 <div class="row">
 
-                                    <div class="my-col-1 col-3">
+                                    <div class="my-col1 col-3">
                                         <img class="Icon-2" src="./images/Icon-2.png" alt="">
                                     </div>
 
@@ -94,7 +95,7 @@
                             <div class="container-fluid">
                                 <div class="row">
 
-                                    <div class="col-3">
+                                    <div class="my-col1 col-3">
                                         <img src="./images/Icon-3.png" alt="">
                                     </div>
 
@@ -112,34 +113,42 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-7 col-sm-12 p-5 bg-image position-relative">
-                <img src="./images/Image-2.png" class="speaker position-absolute me-0">
-                <img src="./images/pattern.png" class="bubbles position-absolute mt-5">
+            <div class="bag col-md-7 col-sm-12 bg-image position-relative mb-0">
+                <img src="./images/Image-2.png" class="speaker position-absolute me-0 mb-0">
+                <img src="./images/pattern.png" class="bubbles position-absolute">
             </div>
 
             <footer class="container-fluid footer1">
-                <div class="row p-3">
+                <div class="row row-1">
                     <div class="col-3">
                         <span>© 2019 crowdfund. All Rights Reserved</span>
                     </div>
                     <div class="footer col-6 text-center">
                         <a href="#">CONTACT</a>
+                        &nbsp
+                        &nbsp
                         <a href="#">HELP</a>
-                        <a href="#">TERMS OF USE</a>
-                        <a href="#">PRIVACY POLICY</a>
+                        &nbsp
+                        &nbsp
+                        &nbsp
+                        &nbsp
+                        <a class="white" href="#">TERMS OF USE</a>
+                        &nbsp
+                        &nbsp
+                        <a class="white" href="#">PRIVACY POLICY</a>
+
                     </div>
                     <div class="col-3 text-end">
                         <img class="me-3" src="./images/Twitter.png" alt="Twitter">
                         <img class="me-3" src="./images/Facebook.png" alt="Facebook">
                         <img class="me-3" src="./images/YouTube.png" alt="YouTube">
                     </div>
-    
+
                 </div>
             </footer>
 
         </div>
     </div>
-
 </body>
 
 </html>
