--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a href="#" class="navbar-brand">Crowdfund</a>
             </div>
 
-            <ul class="navbar-nav right">
+            <ul class="navbar-nav right mt-3">
                 <li class="nav-item dropdown d-flex">
                     <img class="img2 rounded-circle" src="./images/Image.png">
                     <a href="#" class="nav-link name dropdown-toggle"><b>
