--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bag col-md-7 col-sm-12 bg-image position-relative mb-0">
+            <div class="bag col-md-7 d-sm-none bg-image position-relative mb-0">
                 <img src="./images/Image-2.png" class="speaker position-absolute me-0 mb-0">
                 <img src="./images/pattern.png" class="bubbles position-absolute">
             </div>
